<resources>
    <string name="app_name">ScriptumApp</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="logo">Logo</string>
    <string name="address">Address</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="create_account">Create Account</string>
    <string name="exit"><u>Exit</u></string>
    <string name="personal_data">Personal data</string>
    <string name="upload_book">Upload book</string>
    <string name="check_books">Check books</string>
    <string name="location">Location</string>
    <string name="user_logged">User logged</string>
    <string name="account_created">Account created</string>
    <string name="search">Search</string>
    <string name="book_title">Book Title</string>
    <string name="author">Author</string>
    <string name="editorial">Editorial</string>
    <string name="publication_year">Publication Year</string>
    <string name="current_status_book">Current Status Book</string>
    <string name="comments">Comments</string>
    <string name="text_queries">Queries</string>
    <string name="book_loan">Book Loan</string>
    <string name="book_exchange">Book Exchange</string>
    <string name="gift_book">Gift Book</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="phone">Phone</string>

    <string name="recomendaci">Nearby books</string>
    <string name="librosvistos">Recently viewed books</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="incorrect_name_pass">Incorrect email or password</string>
    <string name="book_added_successfully">Book added successfully</string>
    <string name="unable_add_book">Unable to add the book</string>
    <string name="rectangle">Rectangle</string>
    <string name="photo_button">Photo button</string>
    <string name="upload_book_button">upload book button</string>
    <string name="reset_password">Sending password reset link (if email is registered)...</string>
    <string name="reset">Reset password</string>
    <string name="enter_an_address">Enter an address</string>
    <string name="location_not_found">Location not found</string>
    <string name="save">Save</string>
    <string name="no_results_found">No results found</string>
    <string name="title">Title</string>
    <string name="search_title_">Search title or author</string>
    <string name="user">User</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="message_empty">The message cannot be empty</string>
    <string name="message_error">Error sending message</string>
    <string name="error_loading_user_data">Error loading user data</string>
    <string name="timestamp">Timestamp</string>
    <string name="sensitive_information">"Do not share sensitive information, like passwords"</string>
    <string name="there_s_no_image">There\'s no image</string>
    <string name="error_updating_address">Error updating address</string>
    <string name="address_updated">Address updated!</string>
    <string name="enter_a_valid_address">Enter a valid address</string>
    <string name="the_document_does_not_exist">The document does not exist</string>
    <string name="you_must_search_the_address_first">You must search the address first</string>
    <string name="required_field">Required field</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="_6_characters_minimum">6 characters minimum</string>
    <string name="password_should_be_at_least_6_characters">Password should be at least 6 characters</string>
    <string name="name_updated">Name updated</string>
    <string name="error_updating_name">Error updating name</string>
    <string name="password_updated">Password updated!</string>
    <string name="error_updating_password">"Error updating password: "</string>
    <string name="error_try_logging_in">Error updating password. Please try logging in again.</string>
    <string name="verify_new_email">Email updated. Please verify your new email address.</string>
    <string name="use_new_credentials">User logged out. Please log in with your new credentials.</string>
    <string name="no_user_is_logged_in">No user is logged in.</string>
    <string name="error_updating_email">"Error updating email: "</string>
    <string name="pass">password</string>
    <string name="user_logged_out">User logged out</string>
    <string name="user_photo_uploaded">User photo uploaded</string>
    <string name="error_uploading_user_photo">Error uploading user photo</string>
    <string name="error_retrieving_document">Error retrieving document</string>
    <string name="search_title">Search title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages">Messages</string>
    <string name="type">Type</string>
    <string name="search_address">Search address</string>
    <string name="book">Book</string>
    <string name="this_field_can_t_be_empty">This field can´t be empty</string>
    <string name="latest_books_added">Latest books from other users</string>
    <string name="my_books">My Books</string>
    <string name="ok">OK</string>
    <string name="recommended_books">Recommended books</string>
    <string name="error_updating_book">Error updating book</string>
    <string name="book_updated">Book updated!</string>
    <string name="error_uploading_photo">Error uploading photo</string>
    <string name="book_uploaded">Book uploaded!</string>
    <string name="please_select_an_image">Please select an image</string>
    <string name="error_saving_book_data">Error saving book data</string>
    <string name="invalid_year_format">Invalid year format</string>
    <string name="error_uploading_book">Error uploading book</string>
    <string name="login_required">Login required</string>
</resources>