<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@drawable/imageninicio">

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="344dp"
        android:layout_height="579dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/nameSurname"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/name_and_surname"
        android:inputType="text"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle"
        app:layout_constraintStart_toStartOf="@+id/rectangle"
        app:layout_constraintTop_toTopOf="@+id/rectangle" />

    <EditText
        android:id="@+id/address"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="text"

        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle"
        app:layout_constraintStart_toStartOf="@+id/rectangle"
        app:layout_constraintTop_toTopOf="@+id/rectangle" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="280dp"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle"
        app:layout_constraintStart_toStartOf="@+id/rectangle"
        app:layout_constraintTop_toTopOf="@+id/rectangle" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="360dp"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle"
        app:layout_constraintStart_toStartOf="@+id/rectangle"
        app:layout_constraintTop_toTopOf="@+id/rectangle" />

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="270dp"
        android:layout_height="64dp"
        android:layout_marginTop="440dp"
        android:backgroundTint="@color/buttons"
        android:text="@string/create_account"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/rectangle"
        app:layout_constraintTop_toTopOf="@+id/rectangle" />

    <TextView
        android:id="@+id/exitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:text="@string/exit"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/rectangle"
        app:layout_constraintTop_toTopOf="@+id/rectangle" />


</androidx.constraintlayout.widget.ConstraintLayout>