<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imageninicio"
    tools:context=".Location">

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="344dp"
        android:layout_height="579dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textLocation"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter"
        android:text="@string/location"
        android:textColor="@color/buttonQueries"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/backLocation"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:layout_marginTop="340dp"
        android:backgroundTint="@color/buttonQueries"
        android:fontFamily="@font/inter"
        android:text="@string/back"
        android:textColor="@color/toastBackground"
        android:textSize="14dp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLocation" />

    <Button
        android:id="@+id/addLocation"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="272dp"
        android:backgroundTint="@color/buttonQueries"
        android:fontFamily="@font/inter"
        android:text="@string/add"
        android:textColor="@color/toastBackground"
        android:textSize="14dp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.220"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLocation" />

    <Button
        android:id="@+id/editLocation"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="272dp"
        android:backgroundTint="@color/buttonQueries"
        android:fontFamily="@font/inter"
        android:text="@string/edit"
        android:textColor="@color/toastBackground"
        android:textSize="14dp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.780"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>