<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/rectangle"
            android:layout_width="344dp"
            android:layout_height="579dp"
            android:layout_marginTop="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rectangle" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextEmail"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="196dp"
            android:textColorHint="@color/text"
            app:boxBackgroundMode="none"
            app:boxStrokeWidth="0dp"
            app:layout_constraintEnd_toEndOf="@+id/rectangle"
            app:layout_constraintStart_toStartOf="@+id/rectangle"
            app:layout_constraintTop_toTopOf="@+id/rectangle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:fontFamily="@font/inter"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/text"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/resetButton"
            android:layout_width="270dp"
            android:layout_height="64dp"
            android:layout_marginTop="76dp"
            android:backgroundTint="@color/buttons"
            android:fontFamily="@font/inter"
            android:text="@string/reset"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/rectangle"
            app:layout_constraintStart_toStartOf="@+id/rectangle"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <Button
            android:id="@+id/goBackButton"
            android:layout_width="270dp"
            android:layout_height="64dp"
            android:layout_marginTop="172dp"
            android:backgroundTint="@color/buttons"
            android:fontFamily="@font/inter"
            android:text="@string/back"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/rectangle"
            app:layout_constraintHorizontal_bias="0.567"
            app:layout_constraintStart_toStartOf="@+id/rectangle"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>